testdata/baselines/reference/submodule/conformance/moduleExportAssignment7.errors.txt
index.ts(2,24): error TS2694: Namespace '"mod".export=' has no exported member 'Thing'.
index.ts(3,24): error TS2694: Namespace '"mod".export=' has no exported member 'AnotherThing'.
index.ts(4,24): error TS2694: Namespace '"mod".export=' has no exported member 'foo'.
index.ts(5,24): error TS2694: Namespace '"mod".export=' has no exported member 'qux'.
index.ts(6,24): error TS2694: Namespace '"mod".export=' has no exported member 'baz'.
index.ts(7,24): error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
index.ts(8,24): error TS2694: Namespace '"mod".export=' has no exported member 'literal'.
index.ts(19,31): error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
main.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(2,28): error TS2694: Namespace '"mod".export=' has no exported member 'Thing'.
main.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(3,28): error TS2694: Namespace '"mod".export=' has no exported member 'AnotherThing'.
main.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(4,28): error TS2694: Namespace '"mod".export=' has no exported member 'foo'.
main.js(5,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(5,28): error TS2694: Namespace '"mod".export=' has no exported member 'qux'.
main.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(6,28): error TS2694: Namespace '"mod".export=' has no exported member 'baz'.
main.js(7,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(7,28): error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
main.js(8,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(8,28): error TS2694: Namespace '"mod".export=' has no exported member 'literal'.
main.js(15,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(16,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(17,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(18,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(19,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(20,12): error TS8010: Type annotations can only be used in TypeScript files.
main.js(20,35): error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
main.js(21,12): error TS8010: Type annotations can only be used in TypeScript files.
mod.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== mod.js (1 errors) ====
    class Thing  { x = 1 }
    class AnotherThing { y = 2  }
    function foo() { return 3 }
    function bar() { return 4 }
    /** @typedef {() => number} buz */
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        Thing,
    ~~~~~~~~~~
        AnotherThing,
    ~~~~~~~~~~~~~~~~~
        foo,
    ~~~~~~~~
        qux: bar,
    ~~~~~~~~~~~~~
        baz() { return 5 },
    ~~~~~~~~~~~~~~~~~~~~~~~
        literal: "",
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== main.js (22 errors) ====
    /**
     * @param {import("./mod").Thing} a
               ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'Thing'.
     * @param {import("./mod").AnotherThing} b
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~~~~~~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'AnotherThing'.
     * @param {import("./mod").foo} c
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'foo'.
     * @param {import("./mod").qux} d
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'qux'.
     * @param {import("./mod").baz} e
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'baz'.
     * @param {import("./mod").buz} f
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
     * @param {import("./mod").literal} g
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                               ~~~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'literal'.
     */
    function jstypes(a, b, c, d, e, f, g) {
        return a.x + b.y + c() + d() + e() + f() + g.length
    }
    
    /**
     * @param {typeof import("./mod").Thing} a
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {typeof import("./mod").AnotherThing} b
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {typeof import("./mod").foo} c
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {typeof import("./mod").qux} d
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {typeof import("./mod").baz} e
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {typeof import("./mod").buz} f
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                                      ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
     * @param {typeof import("./mod").literal} g
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function jsvalues(a, b, c, d, e, f, g) {
        return a.length + b.length + c() + d() + e() + f() + g.length
    }
    
==== index.ts (8 errors) ====
    function types(
        a: import('./mod').Thing,
                           ~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'Thing'.
        b: import('./mod').AnotherThing,
                           ~~~~~~~~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'AnotherThing'.
        c: import('./mod').foo,
                           ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'foo'.
        d: import('./mod').qux,
                           ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'qux'.
        e: import('./mod').baz,
                           ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'baz'.
        f: import('./mod').buz,
                           ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
        g: import('./mod').literal,
                           ~~~~~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'literal'.
    ) {
        return a.x + b.y + c() + d() + e() + f() + g.length
    }
    
    function values(
        a: typeof import('./mod').Thing,
        b: typeof import('./mod').AnotherThing,
        c: typeof import('./mod').foo,
        d: typeof import('./mod').qux,
        e: typeof import('./mod').baz,
        f: typeof import('./mod').buz,
                                  ~~~
!!! error TS2694: Namespace '"mod".export=' has no exported member 'buz'.
        g: typeof import('./mod').literal,
    ) {
        return a.length + b.length + c() + d() + e() + f() + g.length
    }
    